; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_codec_tags.c_mp_set_codec_from_tag.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_codec_tags.c_mp_set_codec_from_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_codec_params = type { i64, i64, i32, i32 }

@STREAM_AUDIO = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_set_codec_from_tag(%struct.mp_codec_params* %0) #0 {
  %2 = alloca %struct.mp_codec_params*, align 8
  store %struct.mp_codec_params* %0, %struct.mp_codec_params** %2, align 8
  %3 = load %struct.mp_codec_params*, %struct.mp_codec_params** %2, align 8
  %4 = getelementptr inbounds %struct.mp_codec_params, %struct.mp_codec_params* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.mp_codec_params*, %struct.mp_codec_params** %2, align 8
  %7 = getelementptr inbounds %struct.mp_codec_params, %struct.mp_codec_params* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @lookup_tag(i64 %5, i32 %8)
  %10 = load %struct.mp_codec_params*, %struct.mp_codec_params** %2, align 8
  %11 = getelementptr inbounds %struct.mp_codec_params, %struct.mp_codec_params* %10, i32 0, i32 3
  store i32 %9, i32* %11, align 4
  %12 = load %struct.mp_codec_params*, %struct.mp_codec_params** %2, align 8
  %13 = getelementptr inbounds %struct.mp_codec_params, %struct.mp_codec_params* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @STREAM_AUDIO, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %25

17:                                               ; preds = %1
  %18 = load %struct.mp_codec_params*, %struct.mp_codec_params** %2, align 8
  %19 = getelementptr inbounds %struct.mp_codec_params, %struct.mp_codec_params* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %17
  %23 = load %struct.mp_codec_params*, %struct.mp_codec_params** %2, align 8
  %24 = call i32 @map_audio_pcm_tag(%struct.mp_codec_params* %23)
  br label %25

25:                                               ; preds = %22, %17, %1
  ret void
}

declare dso_local i32 @lookup_tag(i64, i32) #1

declare dso_local i32 @map_audio_pcm_tag(%struct.mp_codec_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
